<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android">

        <item
                android:id="@+id/action_filter_language"
                android:title="@string/filter_languages_title" />

        <item
                android:id="@+id/action_manage"
                android:title="@string/manage_sources"
                android:titleCondensed="@string/manage" />

        <item
                android:id="@+id/action_add_custom_source"
                android:title="@string/add_custom_source"
                android:titleCondensed="@string/custom_source" />

        <item
                android:id="@+id/action_import_parser"
                android:title="@string/import_parser_template"
                android:titleCondensed="@string/import_parser_short" />

        <item
                android:id="@+id/action_manage_extensions"
                android:title="@string/ext_extensions"
                android:titleCondensed="@string/ext_extensions_short" />

        <item
                android:id="@+id/action_add_browser_source"
                android:title="@string/add_browser_source"
                android:titleCondensed="@string/browser_source" />


    <item
            android:id="@+id/action_add_source_visually"
            android:title="@string/visual_rule_builder_add_source_visually"
            android:titleCondensed="@string/visual_rule_builder_title" />

    <item
            android:id="@+id/action_manage_plugins"
            android:title="@string/manage_plugins"
            android:titleCondensed="@string/plugins" />

</menu>
